--- a/vite-vanilla-js-jquery/index.html
+++ b/vite-vanilla-js-jquery/index.html
@@ -8,11 +8,11 @@
   </head>
   <body>
     <div id="app">
-      <h1>サンプル：vite-vanilla-js（フレームワーク等を使わないピュアなJavaScript）</h1>
-      <p>
-        以下はミニマムなTODOリストのサンプルです（<a href="">ソースコード</a>）。
+      <h1>Vite + バニラJS(jQuery)のサンプル</h1>
+      <p class="info">
+        ViteでフレームワークやTypeScriptを使わずに構築したウェブページのサンプルです<a href="">（ソースコード）</a><br>
         viteを利用することで、VueやReactのようなフレームワークを使わなくても
-        import/exportを使った効率的な開発が行えることを確認してください。
+        import/exportを使った効率的な開発が行えることを確認してください
       </p>
 
       <div id="sample">
