サンプルからソースへのリンクを追加

--- a/vite-typescript-assets/index.html
+++ b/vite-typescript-assets/index.html
@@ -7,6 +7,7 @@
     <title>Vite App</title>
   </head>
   <body>
+    <h1>Vite + TypeScript + アセットのサンプル</h1>
     <div id="app">
       <section class="sample1">
         <h2>サンプル1：assetsフォルダの画像をスクリプトからimportして使う</h2>
