--- a/vite-vanilla-js-jquery/index.html
+++ b/vite-vanilla-js-jquery/index.html
@@ -10,7 +10,7 @@
     <div id="app">
       <h1>Vite + バニラJS(jQuery)のサンプル</h1>
       <p class="info">
-        ViteでフレームワークやTypeScriptを使わずに構築したウェブページのサンプルです<a href="">（ソースコード）</a><br>
+        ViteでフレームワークやTypeScriptを使わずに構築したウェブページのサンプルです。<a href="https://github.com/ics-creative/210708_vite/tree/main/vite-vanilla-js-jquery">ソースコード</a><br>
         viteを利用することで、VueやReactのようなフレームワークを使わなくても
         import/exportを使った効率的な開発が行えることを確認してください
       </p>
