--- a/vite-typescript-three/index.html
+++ b/vite-typescript-three/index.html
@@ -10,7 +10,7 @@
     <div id="app">
       <div id="descriptions">
         <h1>Vite + TypeScript + Three.jsのサンプル</h1>
-        <p>ViteでTypeScriptと任意のライブラリを用いるサンプルです。<a href="xxx">ソースコード</a></p>
+        <p>ViteでTypeScriptと任意のライブラリを用いるサンプルです。<a href="https://github.com/ics-creative/210708_vite/tree/main/vite-typescript-three">ソースコード</a></p>
       </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
