リンク漏れ・タイポ修正

--- a/vite-typescript-assets/index.html
+++ b/vite-typescript-assets/index.html
@@ -8,6 +8,10 @@
   </head>
   <body>
     <h1>Vite + TypeScript + アセットのサンプル</h1>
+    <div class="info">
+      Viteで画像等のアセットを使用するサンプルです。開発者ツールを使用して、それぞれのサンプルでどのように画像が読み込まれているか確認してみてください。
+      <a href="https://github.com/ics-creative/210708_vite/tree/main/vite-typescript-assets">ソースコード</a>
+    </div>
     <div id="app">
       <section class="sample1">
         <h2>サンプル1：assetsフォルダの画像をスクリプトからimportして使う</h2>
